Archive2/d3/96f64c7d8069ea/output
main.cpp:6:10: error: class member cannot be redeclared
    void f(const reference);
         ^
main.cpp:5:10: note: previous declaration is here
    void f(reference);
         ^
main.cpp:6:10: error: multiple overloads of 'f' instantiate to the same signature 'void (reference)'
    void f(const reference);
         ^
main.cpp:9:8: note: in instantiation of template class 'A<int>' requested here
A<int> a;
       ^
main.cpp:5:10: note: previous declaration is here
    void f(reference);
         ^
2 errors generated.
